--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rover-engine": "file:../rover-engine",
     "yaml": "^1.10.2"
   },
-  "name": "@rover/cli",
+  "name": "@rover-tools/cli",
   "description": "Rover-CLI is a SAM module generating system, which generates SAM projects based on user requirements. It will have a set of predefined stacks(Auth, CRUD) which are commonly used and  a option to define our custom stacks. It is designed using typescript with SAM CLI support. Currently, it is a CLI-based library that supports Node and Python with a limited set of AWS services.",
   "version": "1.0.0",
   "main": "bin/init.js",
