--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "@types/node": "^17.0.23"
   },
   "dependencies": {
+    "@rover-tools/engine": "^1.0.0",
     "@types/inquirer": "^8.2.1",
     "aws-lambda": "^1.0.7",
     "esm": "^3.2.25",
     "immer": "^9.0.14",
     "inquirer": "^8.2.4",
-    "rover-engine": "file:../rover-engine",
     "yaml": "^1.10.2"
   },
   "name": "@rover-tools/cli",
