updated rover engine versions in package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "esm": "^3.2.25",
     "immer": "^9.0.14",
     "inquirer": "^8.2.4",
+    "js-yaml": "^4.1.0",
     "path": "^0.12.7",
     "shx": "^0.3.4",
     "yaml": "^1.10.2"
