--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@rover-tools/engine": "file:../rover-engine",
+    "@rover-tools/engine": "^0.0.47",
     "@types/inquirer": "^8.2.1",
     "esm": "^3.2.25",
     "immer": "^9.0.14",
