--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,15 @@ jobs:
         uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
 
-      - name:  Setup Node.js environment
+      - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-          
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
+
       - name: Install Dependicies
-        run : npm install
-          
+        run: npm install
+
       - name: Build
         run: npm run build
 
