--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-eslint-plugin": "^5.0.6",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "typescript": "^4.9.3"
   },
@@ -16,7 +17,6 @@
     "@types/inquirer": "^8.2.1",
     "eslint-config-prettier": "^8.5.0",
     "esm": "^3.2.25",
-    "immer": "^9.0.14",
     "inquirer": "^8.2.4",
     "js-yaml": "^4.1.0",
     "path": "^0.12.7",
@@ -32,13 +32,13 @@
   "scripts": {
     "clean": "shx rm -rf dist/*",
     "start": "tsc   bin/init.ts && tsc  bin/index.ts && npm install -g . ",
-    "build": "tsc",
+    "build": "tsc && npm run format:write && npm run lint:fix",
     "watch": "tsc --watch",
     "localtest": "npm install /Users/dheerajbhatt/proj/rover-engine && npm run build && npm install /Users/dheerajbhatt/proj/rover-cli -g  ",
     "prepack": "npm run clean && npm run build ",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
-    "lint:check": "eslint .",
+    "lint:check": "eslint . ",
     "lint:fix": "eslint --fix ."
   },
   "bin": {
@@ -61,5 +61,6 @@
   "homepage": "https://github.com/antstackio/rover-cli#readme",
   "workspaces": [
     "../rovertest/test"
-  ]
+  ],
+  "types": "./dist/bin/init.d.ts"
 }
