updated the release version and test files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@rover-tools/engine": "file:../rover-engine",
+    "@rover-tools/engine": "0.0.54",
     "@types/inquirer": "^8.2.1",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
@@ -27,7 +27,7 @@
   "type": "commonjs",
   "name": "@rover-tools/cli",
   "description": "Rover-CLI is a SAM module generating system, which generates SAM projects based on user requirements. It will have a set of predefined stacks(Auth, CRUD) which are commonly used and  a option to define our custom stacks. It is designed using typescript with SAM CLI support. Currently, it is a CLI-based library that supports Node and Python with a limited set of AWS services.",
-  "version": "0.0.96",
+  "version": "0.0.97",
   "main": "dist/bin/init.js",
   "scripts": {
     "clean": "shx rm -rf dist/*",
